fix scrollbar issue

--- a/css/animal_selector.styl
+++ b/css/animal_selector.styl
@@ -295,7 +295,7 @@
       height: 394px;
       margin: 0 -1px;
       position: relative;
-      max-width: 383px;
+      overflow: hidden;
 
       [data-animal] {
         border: 1px solid $green-dark;
